--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FtHelloWorld</string>
+    <string name="default_name">Hello World!</string>
+    <string name="changed_name">Slava Ukraini</string>
+    <string name="btn_change_name">Click Me!</string>
 </resources>
