Added button to change color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="default_name">Hello World!</string>
     <string name="changed_name">Slava Ukraini!</string>
     <string name="btn_change_name">Click Me!</string>
+    <string name="btn_change_color">Support!</string>
 </resources>
